// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "sharedcrud/betarpc";

package main;

service BetaCRUDRPC {
  rpc GetBetaInformation (BetaGetRequest) returns (BetaGetReply) {}
  rpc UpdateBetaInformation (BetaUpdateRequest) returns (BetaUpdateReply) {}
}

message BetaUpdateRequest {
  string ID = 1;
  string Name = 2;
  string Description = 3;
  string Status = 4;
}

message BetaUpdateReply {
  string status = 1;
}

message BetaGetRequest {
  int64 entityID = 1;
}

message BetaGetReply {
  int64 ID = 1;
  string Name = 2;
  string Description = 3;
  string Status = 4;
}
